--- a/base.css
+++ b/base.css
@@ -344,6 +344,8 @@ a {
     margin-left: 10px;
 }
 /* who we are section end */
+
+/* service section */
 .services {
     width: 1920px;
     margin: 0 auto;
@@ -431,3 +433,4 @@ a {
     display: flex;
     justify-content: center;
 }
+/* service section end */
